--- a/src/universidadgrupo/Vistas/Menu.form
+++ b/src/universidadgrupo/Vistas/Menu.form
@@ -46,6 +46,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Manejo de inscripciones"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemManejoInscActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItemManipNotas">
               <Properties>
