--- a/src/universidadgrupo/Vistas/FormularioInscripciones.form
+++ b/src/universidadgrupo/Vistas/FormularioInscripciones.form
@@ -148,6 +148,9 @@
               </Table>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jTableListaMateriasMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
