form carga de notas casi terminado

--- a/src/universidadgrupo/Vistas/FormCargaDeNotas.form
+++ b/src/universidadgrupo/Vistas/FormCargaDeNotas.form
@@ -101,6 +101,9 @@
               </Table>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jTableListaAlumnosMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -108,6 +111,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Guardar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonGuardarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButtonSalir">
       <Properties>
